test/core/errors/packages_error/zs/middle_structure.zs
package middle_structure;

import bottom_structure.*;

struct MiddleStructure
{
    uint16  value;
};
